<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_fav_navbar"
        android:title="@string/favorite"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/create"
        android:icon="@drawable/ic_create"
        android:title="@string/create"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/hire"
        android:icon="@drawable/ic_hire"
        android:title="@string/hire"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>
</menu>