<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        style="@style/image_clickable"
        android:src="@drawable/ic_fav_bordered"
        android:layout_marginHorizontal="5dp"
        android:contentDescription="@string/button_favorite" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        style="@style/image_clickable"
        android:layout_marginHorizontal="5dp"
        android:src="@drawable/ic_bookmark_bordered"
        android:contentDescription="@string/button_bookmark"/>

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        style="@style/image_clickable"
        android:layout_marginHorizontal="5dp"
        android:src="@drawable/ic_message_bordered"
        android:contentDescription="@string/button_message"/>

</LinearLayout>