<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/card_image"
            android:layout_margin="10dp"
            android:contentDescription="@string/image_card_home"/>
        
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_fav_enabled"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="28dp"
            android:layout_gravity="end"/>
        
        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/creator"
            android:layout_gravity="bottom"
            android:contentDescription="@string/image_card_user"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_name"
            android:layout_marginStart="16dp"
            android:layout_gravity="bottom"
            android:fontFamily="@font/inter_medium"
            android:textSize="11sp"/>

    </androidx.cardview.widget.CardView>

</RelativeLayout>