<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/title_popup"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:cardCornerRadius="32dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/profile_popup"/>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="13dp"
                android:paddingVertical="6dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_popup"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_for_work"
                    android:textColor="@color/green"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="11sp"/>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            style="@style/image_clickable"
            android:src="@drawable/ic_fav_bordered"
            android:layout_marginHorizontal="5dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="95dp"
            android:contentDescription="@string/button_favorite" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            style="@style/image_clickable"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/ic_bookmark_bordered"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/button_bookmark"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            style="@style/image_clickable"
            android:layout_marginHorizontal="5dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_message_bordered"
            android:contentDescription="@string/button_message"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="400dp"
        android:layout_height="315dp"
        android:src="@drawable/dummy_banner_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_popup_desc"
        android:fontFamily="@font/inter_bold"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_popup_desc_2"
        android:fontFamily="@font/inter_medium"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            style="@style/image_clickable"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/ic_eye_bordered"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            style="@style/image_clickable"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/ic_fav_bordered"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            style="@style/image_clickable"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/ic_bookmark_bordered" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            style="@style/image_clickable"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/ic_share_bordered" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            style="@style/image_clickable"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/ic_message_bordered"/>

    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D9D9D9"
        android:layout_marginTop="30dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/profile_popup"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_popup"
        android:fontFamily="@font/urbanist_bold"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="art_studio"
        android:fontFamily="@font/urbanist_medium"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_width="139dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/work_with_me"
        android:fontFamily="@font/inter_semibold"
        android:textSize="12sp"
        android:backgroundTint="@color/primary"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_with_the_artist"
        android:fontFamily="@font/inter_bold"
        android:textSize="22sp"
        android:layout_marginTop="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:listitem="@layout/card_popup"
        tools:itemCount="10"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</LinearLayout>